compiling_error.txt
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp: In function 'int main()':
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp:6:3: error: 'create_opengl_context' was not declared in this scope
   create_opengl_context();
   ^~~~~~~~~~~~~~~~~~~~~
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp:7:2: error: 'create_opencl_context' was not declared in this scope
  create_opencl_context();
  ^~~~~~~~~~~~~~~~~~~~~
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp:11:33: error: 'window' was not declared in this scope
   while (!glfwWindowShouldClose(window))
                                 ^~~~~~
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp:11:11: error: 'glfwWindowShouldClose' was not declared in this scope
   while (!glfwWindowShouldClose(window))
           ^~~~~~~~~~~~~~~~~~~~~
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp:18:2: error: 'destroy_opengl_context' was not declared in this scope
  destroy_opengl_context();
  ^~~~~~~~~~~~~~~~~~~~~~
/Users/Erik/.CMVolumes/Erik Zorzin/Erik_Alessandro/Neutrino/src/main.cpp:19:2: error: 'destroy_opencl_context' was not declared in this scope
  destroy_opencl_context();
  ^~~~~~~~~~~~~~~~~~~~~~
